--- a/G2TrunkIOS.plist
+++ b/G2TrunkIOS.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>=https://nanuk2018.github.io/build_upload/testipa.ipa</string>
+					<string>https://nanuk2018.github.io/build_upload/testipa.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
